# Estructuras-Computacionales

./: .gitignore  README.md
ASM_Proyect/: CMakeLists.txt  documentation.md  startup_stm32l476xx.s
ASM_Proyect/src/: main.s
DOOMSTM32L476RG/: CMakeLists.txt
DOOMSTM32L476RG/drivers/keyPad/: keypad.c  keypad.h
DOOMSTM32L476RG/drivers/ringBuffer/: ringBuffer.c
DOOMSTM32L476RG/inc/: exti.h  gpio.h  main.h  rcc.h  uart.h
DOOMSTM32L476RG/src/: exti.c  gpio.c  i2c.c  rcc.c  syscfg.c  tim.c  uart.c
P1_RoomController/: CMakeLists.txt
P1_RoomController/inc/: main.h  rcc.h  tim.h  uart.h
P1_RoomController/src/: gpio.c  main.c  rcc.c  roomcontrol.c  tim.c  uart.c
PWM/: .gitignore  CMakeLists.txt
PWM/inc/: exti.h  gpio.h  main.h  rcc.h  systick.h  tim.h  uart.h
PWM/src/: exti.c  gpio.c  main.c  rcc.c  tim.c
RoomControl_Final/: CMakeLists.txt
RoomControl_Final/.cache/clangd/index/: exti.c.155B8B9FFA8EA051.idx  exti.h.D9B42C254B9A1C96.idx  flash.c.93525EB78D8B93E3.idx  flash.h.A3CF0799E6CE7BC3.idx  font.c.3493D93CFA6D33FD.idx  font.h.3DB5D09F80C50662.idx  gpio.c.C02AFB4856DA6353.idx  gpio.h.9F0AC337EAB3518E.idx  i2c.c.9777234B6D83F6B9.idx  i2c.h.21446843C2D79D3B.idx  keypad.c.27F27762D360E2A5.idx  keypad.h.C558F4EC430E65B8.idx  main.c.7C516F0D312DCA73.idx  main.h.D78BC99F1FE0C345.idx  nvic.c.EA79C41D4BE6E511.idx  nvic.h.5CE701B78919C537.idx  rcc.c.4088E2950544659F.idx  rcc.h.BA9F8FBFBEC080A4.idx  ringBuffer.c.8618F9623D6418EE.idx  ringBuffer.h.21ADD64BF04E5B17.idx  ssd1306.c.98D4380ADB5B4E90.idx  ssd1306.h.11DB589A03B48922.idx  startup_stm32l476rgtx.s.309C56D67568D958.idx  syscalls.c.ECA138E5EFE6DB00.idx  syscfg.c.520C692C724F37C1.idx  syscfg.h.CF7D0C3CB0BEF28C.idx  sysmem.c.2390713228846C0D.idx  systick.c.593486A85ECBC5E8.idx  systick.h.9E78ECB454ED48EA.idx  tim.c.E12E7896D3082826.idx  tim.h.374F5A890685704F.idx  uart.c.4A1AB58649212670.idx  uart.h.9B072E959301FF04.idx
RoomControl_Final/drivers/keyPad/: keypad.c  keypad.h
RoomControl_Final/inc/: exti.h  uart.h
RoomControl_Final/src/: exti.c  gpio.c  main.c  syscfg.c  uart.c
RoomController/: CMakeLists.txt  keypad_documentation.md
RoomController/drivers/keyPad/inc/: keypad.h
RoomController/drivers/keyPad/src/: keypad.c
RoomController/drivers/ringBuffer/src/: ringBuffer.c
RoomController/inc/: exti.h  gpio.h  main.h  roomcontrol.h  systick.h
RoomController/src/: exti.c  main.c  roomcontrol.c  systick.c  uart.c
[ASM]LED_BUTTON_BLINK/LED_BUTTON_BLINK/: CMakeLists.txt  stm32l476rgtx_FLASH.ld
[ASM]LED_BUTTON_BLINK/LED_BUTTON_BLINK/Src/: main.s
lab1/: informe.md
lab2/: informe.md
